Fix quick-select overflow, update images, use relative paths in readme

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -874,7 +874,7 @@ input, textarea {
 	max-width: 320px;
 	transform: translate(-50%, -50%);
 	max-height: calc(80vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
-	/* overflow-y: auto; */
+	overflow-y: hidden;
 }
 .quick-select .manga-profile-medium, .quick-select .add-padding {
 	padding: 20px;
